<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:paddingLeft="40dp"
    android:paddingTop="40dp"
    android:paddingRight="40dp"
    android:paddingBottom="40dp"
    tools:context=".NewSearchDialogFragment">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSearch_search"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="@+id/editTextDialogYear" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSearch_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextDialogYear"
        app:layout_constraintTop_toBottomOf="@+id/editTextDialogYear" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSearch_release_year"
        app:layout_constraintBottom_toTopOf="@+id/editTextDialogYear"
        app:layout_constraintStart_toStartOf="@+id/editTextDialogYear"
        app:layout_constraintTop_toBottomOf="@+id/editTextDialogTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/newSearch_movie_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextDialogTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextDialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/newSearchTitleTextView" />

    <EditText
        android:id="@+id/editTextDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/newSearchTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/newSearchTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextDialogYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="@+id/editTextDialogTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextDialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/newSearchTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_search"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>